<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="org.code.parentsplashscreen.SignUp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textSign_Up"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/rubik_medium"
                    android:gravity="start"
                    android:text="@string/sign_up"
                    android:textColor="@color/back2"
                    android:textSize="@dimen/_30sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.001" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFirstNameLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:hint="@string/first_name"
                    app:counterEnabled="true"
                    app:counterMaxLength="7"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:helperText="Required*"

                    app:helperTextTextColor="#FF0000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textSign_Up"
                    app:startIconDrawable="@drawable/ic_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="8"
                        android:fontFamily="@font/rubik_light"
                        android:textColorHint="@color/background_color"
                        android:textColor="@color/background_color"
                        tools:layout_editor_absoluteX="32dp"
                        tools:layout_editor_absoluteY="37dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLastNameLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/last_name"
                    app:counterEnabled="true"
                    app:counterMaxLength="7"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:helperText="Required*"
                    app:helperTextTextColor="#FF0000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textFirstNameLayout"
                    app:startIconDrawable="@drawable/ic_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="8"
                        android:fontFamily="@font/rubik_light"
                        android:textColorHint="@color/background_color"
                        tools:layout_editor_absoluteX="32dp"
                        tools:layout_editor_absoluteY="37dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textEmailLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/email"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:helperText="Required*"
                    app:helperTextTextColor="#FF0000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textLastNameLayout"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLength="31"
                        android:fontFamily="@font/rubik_light"
                        android:textColorHint="@color/back2"
                        tools:layout_editor_absoluteX="32dp"
                        tools:layout_editor_absoluteY="37dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textNumberLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/number"
                    app:counterEnabled="true"
                    app:counterMaxLength="11"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:helperText="Required*"
                    app:helperTextTextColor="#FF0000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textEmailLayout"
                    app:prefixTextColor="@color/background_color"
                    app:startIconDrawable="@drawable/ic_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLength="11"
                        android:fontFamily="@font/rubik_light"
                        android:textColorHint="@color/background_color"
                        tools:layout_editor_absoluteX="32dp"
                        tools:layout_editor_absoluteY="37dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textPasswordLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/password"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:helperText="Required*"
                    app:helperTextTextColor="#FF0000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textNumberLayout"
                    app:startIconDrawable="@drawable/ic_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLength="21"
                        android:fontFamily="@font/rubik_light"
                        android:textColorHint="@color/background_color"
                        tools:layout_editor_absoluteX="32dp"
                        tools:layout_editor_absoluteY="151dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textPasswordConfirmLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="32dp"
                    android:hint="Password Confirm"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:helperText="Required*"
                    app:helperTextTextColor="#FF0000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textNumberLayout"
                    app:startIconDrawable="@drawable/ic_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textPasswordConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLength="21"
                        android:fontFamily="@font/rubik_light"
                        android:textColorHint="@color/background_color"
                        tools:layout_editor_absoluteX="32dp"
                        tools:layout_editor_absoluteY="151dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textSchoolCodeLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="32dp"
                    android:hint="School Code"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:helperText="Required*"
                    app:helperTextTextColor="#FF0000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textEmailLayout"
                    app:prefixTextColor="@color/background_color"
                    app:startIconDrawable="@drawable/school22">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textSchoolCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="11"
                        android:fontFamily="@font/rubik_light"
                        android:textColorHint="@color/background_color"
                        tools:layout_editor_absoluteX="32dp"
                        tools:layout_editor_absoluteY="37dp" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/button_get_started"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/custom_input"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:fontFamily="@font/rubik"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textPassword" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.507"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_Login">

                    <TextView
                        android:id="@+id/text_already_have_acc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_medium"
                        android:gravity="center"
                        android:text="@string/haveAccount"
                        android:textColor="@color/background_color"
                        android:textSize="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
                        app:layout_constraintHorizontal_bias="0.866"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0" />

                    <TextView
                        android:id="@+id/btnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/rubik_light"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/purple_200"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintBottom_toBottomOf="@id/text_already_have_acc"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.947"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/text_already_have_acc"
                        app:layout_constraintVertical_bias="0.6" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>